2014-02-02  Valentin Hilbig  <tino@subproject.org>

	* data.h (tino_data_vsprintfA): renamed to tino_data_vprintfA

	* buf_printf.h (tino_buf_add_vsprintfO): renamed to tino_buf_vprintfO
	(tino_buf_add_sprintfO): renamed to tino_buf_printfO

2011-10-24  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* main_file.h (tino_main_file_reader): added

2011-10-17  Valentin Hilbig  <tino@noir.03.softkill.org>

	* sysfix.h (_LARGEFILE64_SOURCE, _FILE_OFFSET_BITS): added to
	support larger files again (I am sure it worked previously)

2011-10-15  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile-tests.sh: cmp and CMP test targets added

2011-09-17  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* put.h (tino_put_ansi_start, tino_put_ansi_end): added

2011-07-29  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* ex.h (tino_vpexit): fixing a tail recoursion (endless loop) on
	certain errors.

2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_clear, tino_slist_clear): added

2011-04-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* fatal.h (tino_pvfatal): if tino_exit_default_code is not set,
	then return -2 (as before), else tino_exit_default_code.

	* ex.h (TINO_EXIT_DEFAULT_CODE): added

2011-04-12  Valentin Hilbig  <tino@minotaurus.03.softkill.net>

	* put.h (tino_put_ansi_c): added (from tino_put_ansi_buf)

2011-04-12  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* log.h (tino_log_debug_match): et al. added, this here is not yet
	ready to be used.

	* sock.h (tino_sock_corkE, tino_sock_corkA): added

	* put.h (tino_put_ansi_if): added

2011-03-06  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_number_helper): renamed from
	tino_scale_number
	(tino_scale_number): added

	* log.h (tino_log_errO): added
	(tino_log_vprintfO): prefix support added

	* sock.h (tino_sock_nodelayE, tino_sock_nodelayA): added

2011-02-13  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* proc.h (tino_wait_child_status): added
